# INF8702

./: .gitignore  README.md
Project/: Project.sln  Rapport.aux  Rapport.out  Rapport.tex
Project/Project/: CMakeLists.txt  Project.vcxproj  Project.vcxproj.filters
Project/Project/include/: Camera.h  Control.h  Cube.h  Line.h  Moveable.h  NuanceurProg.h  Renderable.h  Scene.h  Triangle.h  WaterGrid.h
Project/Project/shaders/: addPerturbation.frag  addPerturbation.vert  cube.frag  cube.vert  heightMap.frag  heightMap.vert  line.frag  line.vert  triangle.frag  triangle.vert  waterGrid.frag  waterGrid.vert
Project/Project/src/: Camera.cpp  Control.cpp  Cube.cpp  Line.cpp  Moveable.cpp  NuanceurProg.cpp  Renderable.cpp  Scene.cpp  Texture.hpp  Triangle.cpp  WaterGrid.cpp  fileIO.hpp  main.cpp
TP1/: GrilleQuads.cpp  NuanceurProg.cpp  TP1.vcxproj  main.cpp
TP1/Nuanceurs/: basicSommets.glsl  cubeFragments.glsl  cubeSommets.glsl
TP1/ObjParser/lib/: ObjParser.lib
TP2/: Texture2D.cpp  main.cpp
TP2/Nuanceurs/: carteFragments.glsl  carteSommets.glsl  gazonFragments.glsl  gazonSommets.glsl  skyBoxFragments.glsl  skyBoxSommets.glsl
TP2/ObjParser/lib/: ObjParser.lib
TP3/: Quadrique.cpp  Scene.cpp  TP3.sln  TP3.vcxproj  Triangle.cpp  Vecteur3.h
TP4/: FBO.cpp  TP4.vcxproj  main.cpp
TP4/Nuanceurs/: blurFXFragments.glsl  blurFXSommets.glsl  gazonFragments.glsl  gazonSommets.glsl  modele3DFragments.glsl
TP4/ObjParser/lib/: ObjParser.lib
